Top alignment fix

--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -6,10 +6,6 @@
     clear: both;
     margin: 58px auto 0;
 
-    &.has-localnav {
-        margin-top: 110px;
-    }
-
     @media (min-width: $tablet) {
         margin-top: 104px;
 
